--- a/src/style/login.scss
+++ b/src/style/login.scss
@@ -1,5 +1,6 @@
 .login {
     width: 100%;
     height: 100%;
-    background: url('~@/background.jpg') no-repeat 100% 100%;
+    background: url('~@/background.jpg') no-repeat;
+    background-size: 100% 100%;
 }
