--- a/src/style/login.scss
+++ b/src/style/login.scss
@@ -1,6 +1,18 @@
 .login {
     width: 100%;
     height: 100%;
-    background: url('~@/background.jpg') no-repeat;
+    background: url("~@/background.jpg") no-repeat;
     background-size: 100% 100%;
+    overflow: hidden;
+}
+.login-form {
+    max-width: 300px;
+    margin: 200px auto 0;
+    background-color: #fff;
+}
+.login-form-forgot {
+    float: right;
+}
+.login-form-button {
+    width: 100%;
 }
