--- a/src/style/login.scss
+++ b/src/style/login.scss
@@ -9,6 +9,8 @@
     max-width: 300px;
     margin: 200px auto 0;
     background-color: #fff;
+    padding: 30px 30px 10px;
+    border-radius: 10px;
 }
 .login-form-forgot {
     float: right;
