--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -8,3 +8,18 @@ html, body, #root {
     width: 100%;
     height: 100%;
 }
+ul,li {
+    list-style: none;
+}
+button {
+    border: 0;
+    outline: none;
+    margin: 0;
+    padding: 0;
+}
+a {
+    text-decoration: none;
+}
+a#quit {
+    color: #fff;
+}
