--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -4,22 +4,25 @@
     margin: 0;
     padding: 0;
 }
-html, body, #root {
+html, body, #root, #views {
     width: 100%;
     height: 100%;
 }
 ul,li {
     list-style: none;
 }
-button {
-    border: 0;
-    outline: none;
-    margin: 0;
-    padding: 0;
-}
 a {
     text-decoration: none;
 }
 a#quit {
     color: #fff;
+}
+#box {
+    height: calc(100% - 84px);
+    overflow: hidden;
+}
+#content {
+    float: left;
+    max-width: calc(100% - 256px);
+    height: 100%;
 }
