--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -8,6 +8,9 @@ html, body, #root, #views {
     width: 100%;
     height: 100%;
 }
+ul,ol,dl {
+    margin-bottom: 0;
+}
 ul,li {
     list-style: none;
 }
