--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -14,6 +14,11 @@ ul,ol,dl {
 ul,li {
     list-style: none;
 }
+button {
+    border: 0;
+    outline: none;
+    padding: 0;
+}
 a {
     text-decoration: none;
 }
@@ -31,4 +36,51 @@ a#quit {
     height: 100%;
     padding: 20px;
     box-sizing: border-box;
+}
+.grain-btn {
+    border: 0;
+    background-color: #ff0081;
+    color: #fff;
+    padding: 1em 2em;
+    border-radius:4px;
+    cursor: pointer;
+    outline: none;
+    position: relative;
+    &::before {
+        position: absolute;
+        content: '';
+        pointer-events: none;
+        left: -2em;
+        right: -2em;
+        top: -2em;
+        bottom: -2em;
+        background-repeat: no-repeat;
+        background-image: radial-gradient(circle, #ff0081 20%, transparent 20%),
+            radial-gradient(circle, #ff0081 20%, transparent 20%), 
+            radial-gradient(circle, #ff0081 20%, transparent 20%), 
+            radial-gradient(circle, #ff0081 20%, transparent 20%), 
+            radial-gradient(circle, #ff0081 20%, transparent 20%), 
+            radial-gradient(circle, #ff0081 20%, transparent 20%), 
+            radial-gradient(circle, #ff0081 20%, transparent 20%), 
+            radial-gradient(circle, #ff0081 20%, transparent 20%), 
+            radial-gradient(circle, #ff0081 20%, transparent 20%),
+            radial-gradient(circle, #ff0081 20%, transparent 20%), 
+            radial-gradient(circle, #ff0081 20%, transparent 20%), 
+            radial-gradient(circle, #ff0081 20%, transparent 20%),
+            radial-gradient(circle, #ff0081 20%, transparent 20%), 
+            radial-gradient(circle, #ff0081 20%, transparent 20%), 
+            radial-gradient(circle, #ff0081 20%, transparent 20%), 
+            radial-gradient(circle, #ff0081 20%, transparent 20%);
+        background-size: 0% 0%;
+        background-position: 5% 44%, -5% 20%, 7% 5%, 23% 0%, 37% 0, 58% -2%, 80% 0%, 100% -2%, -5% 80%,
+        100% 55%, 2% 100%, 23% 100%, 42% 100%, 60% 95%, 70% 96%, 100% 100%;
+        transition: background-position .5s ease-in-out, background-size .75s ease-in-out;
+    }
+}
+.grain-btn:active::before {
+    transition: 0s;
+    background-size: 10% 10%, 20% 20%, 15% 15%, 20% 20%, 18% 18%, 10% 10%, 15% 15%, 10% 10%, 18% 18%,
+        15% 15%, 20% 20%, 18% 18%, 20% 20%, 15% 15%, 10% 10%, 20% 20%;
+    background-position: 18% 40%, 20% 31%, 30% 30%, 40% 30%, 50% 30%, 57% 30%, 65% 30%, 80% 32%, 15% 60%,
+        83% 60%, 18% 70%, 25% 70%, 41% 70%, 50% 70%, 64% 70%, 80% 71%;
 }
